# colorizer

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml  settings.json
.github/workflows/: cr.yml
src/: color.rs  colorizer.rs  finder.rs  main.rs  processor.rs
