[package]
name = "colorizer"
version = "1.1.2"
authors = ["Anton Kulinsky <ankulinsky@gmail.com>"]
license = "MIT"
description = "A tool for highlighting words in the terminal"
readme = "README.md"
homepage = "https://github.com/kulinsky/colorizer"
repository = "https://github.com/kulinsky/colorizer"
keywords = ["cli", "highlight", "color", "terminal", "text"]
edition = "2021"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.3"
