[package]
name = "colorizer"
version = "2.0.0"
authors = ["Anton Kulinsky <ankulinsky@gmail.com>"]
license = "MIT"
description = "A tool for highlighting words in the terminal"
readme = "README.md"
homepage = "https://github.com/kulinsky/colorizer"
repository = "https://github.com/kulinsky/colorizer"
keywords = ["cli", "highlight", "color", "terminal", "text"]
edition = "2021"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
regex = "1.9.3"
