[package]
name = "colorizer"
version = "2.1.0"
authors = ["Anton Kulinsky <ankulinsky@gmail.com>"]
license = "MIT"
description = "Colorizer is a tool for highlighting words in your terminal"
readme = "README.md"
homepage = "https://github.com/kulinsky/colorizer"
repository = "https://github.com/kulinsky/colorizer"
keywords = ["cli", "highlight", "color", "terminal", "text"]
edition = "2021"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
home = "0.5.5"
regex = "1.9.3"
yaml-rust = "0.4.5"
